# spoars

./: .coderabbit.yaml  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY.md  codecov.yml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml
.github/workflows/: check.yml  publish.yml  pypi.yml  python.yml
benches/: README.md  poa.rs
benches/common/: mod.rs
docs/design/: 2026-07-06-banded-poa-alignment-design.md  2026-07-06-banded-poa-alignment-plan.md
examples/: profile_align.rs  profile_family.rs
oracle/: CMakeLists.txt  spoa_oracle.cpp
scripts/: install-hooks.sh
scripts/hooks/: pre-commit
spoars-py/: Cargo.toml  README.md  pixi.toml  pyproject.toml
spoars-py/python/spoars/: __init__.py  _spoars.pyi
spoars-py/src/: lib.rs
spoars-py/tests/: test_poa.py
src/: graph.rs  lib.rs
src/align/: backtrack.rs  mod.rs  sisd.rs
src/align/simd/: avx2.rs  band.rs  fill.rs  lanes.rs  mod.rs  neon.rs  profile.rs  sse41.rs
tests/: banded_parity.rs  cli_parity.rs  consensus_summary_parity.rs  engine_parity.rs  graph_parity.rs  oracle_harness.rs  serde_roundtrip.rs  simd_bench.rs  simd_parity.proptest-regressions  simd_parity.rs  subgraph_parity.rs
tests/support/: generators.rs  mod.rs  oracle.rs  runner.rs
