[package]
name = "spoars"
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Faithful native-Rust reimplementation of the spoa partial order alignment library"
readme = "README.md"
repository = "https://github.com/fg-labs/spoars"
homepage = "https://github.com/fg-labs/spoars"
documentation = "https://docs.rs/spoars"
keywords = ["bioinformatics", "poa", "alignment", "consensus", "msa"]
categories = ["science", "algorithms"]
# Keep the published crate lean and self-contained: the C++ differential oracle
# and the pinned spoa submodule are development/test-only (see THIRD-PARTY.md) and
# must not ship in the crate tarball.
exclude = [
    "third_party/**",
    "oracle/**",
    ".github/**",
    "scripts/**",
    "RELAY.md",
]

[[bin]]
name = "spoars"
path = "src/bin/spoars.rs"
# The CLI is the only thing that reads FASTA/FASTQ files, so it is the only
# thing that needs `needletail`. Gating it behind the `cli` feature keeps the
# library (and any downstream consumer, e.g. the Python bindings) free of
# needletail and its compression C dependencies.
required-features = ["cli"]

[features]
# On by default so `cargo build`/`cargo install` still produce the CLI; a
# library-only consumer can opt out with `default-features = false`.
default = ["cli"]
cli = ["dep:needletail"]
# Opt-in structural (de)serialization of a built `Graph` (and its Node/Edge/id
# types). Off by default; the wire format is native-Rust, not spoa's Cereal.
serde = ["dep:serde"]

[dependencies]
# Optional: only pulled in by the `cli` feature (used solely by src/bin/spoars.rs).
needletail = { version = "0.7", optional = true }
# Optional: enables `serde::{Serialize, Deserialize}` on the graph types (the
# `serde` feature). Not built unless a consumer opts in.
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
# Always available to tests (tests/support/generators.rs reads FASTA/FASTQ),
# independent of whether the `cli` feature is enabled.
needletail = "0.7"
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = "0.8"

# Exploratory microbenchmarks for the small-family / short-read regime the
# fgumi consumer drives (Global + convex, 3-10 reads, ~235 bp). Run: `cargo bench`.
[[bench]]
name = "poa"
harness = false
