# Member of the parent spoars workspace (see the root Cargo.toml `[workspace]`),
# kept out of `default-members` so the parent's `cargo` commands never build it;
# it is built only via maturin and linted separately in the Python CI workflow.
# Inheriting `version.workspace` keeps it in lockstep with the `spoars` crate so
# release-plz bumps both together.
[package]
name = "spoars-py"
version.workspace = true
edition = "2021"
license = "MIT"
authors = ["Nils Homer <nils@fulcrumgenomics.com>"]
repository = "https://github.com/fg-labs/spoars"
publish = false

[lib]
name = "_spoars"
crate-type = ["cdylib"]

[dependencies]
# `default-features = false` drops the `cli` feature (and thus needletail + its
# compression C deps): the bindings only use the pure-Rust POA engine. The `serde`
# feature enables `Graph: Serialize + Deserialize` for `Poa` pickle/JSON support.
spoars = { path = "..", default-features = false, features = ["serde"] }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py310"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
